<resources>
    <string name="app_name">TrabalhoPraticoCMU</string>

    <!-- Firebase Authentication strings -->
    <string name="auth_image_description">App Icon</string>
    <string name="auth_title_text">YourAssistant Página de Autenticação</string>

    <string name="sign_in">Iniciar Sessão</string>
    <string name="sign_out">Terminar Sessão</string>
    <string name="create_account">Criar Conta</string>

    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="create_email_hint">novo email</string>
    <string name="create_password_hint">nova password</string>

    <string name="signed_in">Sessão Iniciada - Utilizador: %s</string>
    <string name="signed_out">Sessão Terminada</string>
    <string name="creating_account">Criar um novo registo com Email e Password</string>
    <string name="create_successful">Novo Registo criada com Email: %s</string>
    <string name="create_failed">Falha ao criar novo registo!</string>
    <!-- End -->

    <!-- MainMenu strings -->
    <string name="title_activity_main">MainActivity</string>

    <string name="action_emergency_contact">Contacto Emergência</string>
    <string name="action_alarms_cancel">Cancelar Alarmes</string>
    <string name="action_change_password">Atualizar Password</string>
    <string name="action_signout">Encerrar Sessão</string>
    <string name="action_remover_registo">Remover Registo</string>
    <string name="action_atualizar_registo">Atualizar Dados</string>

    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_medication">Registo Medicação</string>
    <string name="title_farmacy">Farmácias Próximas</string>
    <string name="title_nutrition">Análise Nutrição</string>
    <string name="title_games">Jogos Memória</string>
    <!-- End -->

    <!-- Medication List strings -->
    <string name="medication_enddate">Tomar medicação até: %s</string>
    <string name="medication_dailytakes">Toma da medicação %d vezes por dia.</string>
    <string name="medication_dailytakes_one">Deve tomar a medicação uma vez por dia.</string>
    <string name="medication_dailyperiod">Deve tomar a medicação com um desfazamento de %d horas.</string>
    <string name="medication_dailystart">Toma diária deve iniciar pelas %d:00 horas. </string>
    <string name="medication_quantity">Quantidade medicação disponível: %d</string>
    <string name="medication_remove_title">Remover o item selecionado</string>
    <string name="medication_remove">Deseja realmente cancelar e apagar este registo?</string>
    <string name="medication_remove_success">Registo removido com sucesso!</string>
    <!-- End -->

    <!-- Add Medication strings -->
    <string name="addmed_titulo">Título do Registo</string>
    <string name="addmed_medicamento">Nome do Medicamento</string>
    <string name="addmed_quantidade">Quantidade disponível inicial</string>
    <string name="addmed_horaInicio">Hora de Início da toma diária</string>
    <string name="addmed_numeroTomas">Número total de Tomas Diárias</string>
    <string name="addmed_periodoDiario">Período, em horas, entre cada Toma Diária</string>
    <string name="addmed_definirData">Definir Data Final</string>
    <!-- End -->

    <!-- Pharmacy List Map strings -->
    <string name="pharmacylist_load_text_city">A Procurar pela sua Localização Atual</string>
    <string name="pharmacylist_load_text_list">A Encontrar Farmácias Perto de Si\nAgradecemos a sua paciência</string>
    <string name="pharmacylist_load_text_map">Gerando os Mapa</string>
    <string name="pharmacylist_load_failure_text">Não foi possível encontrar Farmácias para o Local</string>
    <string name="pharmacylist_load_failure_map">Não foi possível gerar o mapa\nPedimos desculpa pela inconveniência</string>
    <string name="pharmacylist_load_failure_gps">Ative o acesso à sua localização para ativar o Serviço!</string>
    <string name="pharmacylist_load_failure_location">Não foi possível obter a sua localização</string>
    <string name="pharmacylist_load_manual_button">Selecionar Local</string>
    <string name="pharmacylist_load_retry_button">Tentar Novamente</string>
    <!-- End -->

    <!-- Game strings -->
    <string name="game_calculus_title">Jogo das Contas</string>
    <string name="game_calculus_details_text">O jogo contém 12 perguntas com questões matemáticas simples
        que poderá resolver para ajudar a manter a sua mente activa! Não se esqueça de treinar
        todos os dias! Carregue em começar para iniciar o jogo.</string>
    <string name="game_more_title">Mais jogos para o Futuro</string>
    <string name="game_more_details_text">Promete-mos trazer-lhe uma grande variedade de novas
        experiências futuras. Stay tuned!</string>
    <!-- End -->
</resources>
