<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/addmed_text_size"
        android:layout_marginTop="@dimen/addmed_textview_margin_top"
        android:text="@string/addmed_titulo" />

    <EditText
        android:id="@+id/add_medication_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/addmed_text_size"
        android:layout_marginTop="@dimen/addmed_textview_margin_top"
        android:text="@string/addmed_medicamento" />

    <EditText
        android:id="@+id/add_medication_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/addmed_text_size"
        android:layout_marginTop="@dimen/addmed_textview_margin_top"
        android:text="@string/addmed_quantidade" />

    <EditText
        android:id="@+id/add_medication_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/addmed_text_size"
        android:layout_marginTop="@dimen/addmed_textview_margin_top"
        android:text="@string/addmed_horaInicio" />

    <EditText
        android:id="@+id/add_medication_dailyStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/addmed_text_size"
        android:layout_marginTop="@dimen/addmed_textview_margin_top"
        android:text="@string/addmed_numeroTomas" />

    <EditText
        android:id="@+id/add_medication_dailyTakes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/addmed_text_size"
        android:layout_marginTop="@dimen/addmed_textview_margin_top"
        android:text="@string/addmed_periodoDiario" />

    <EditText
        android:id="@+id/add_medication_dailyPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/add_medication_endDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/addmed_button_margin_top"
        android:background="@color/colorAccent"
        android:textColor="@color/meditem_light"
        android:text="@string/addmed_definirData" />

</LinearLayout>